--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-signin-scope" content="profile email" />
-    <meta
-      name="google-signin-client_id"
-      content="879295277348-1it13b4u31puv222uq4qutu256r80v9u.apps.googleusercontent.com"
-    />
+    <meta name="google-signin-client_id" content="" />
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta
       name="description"
